--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 </section>
 
 
-<section class="section" id="mission">
+<section class="white-section" id="mission">
 
     <div class="mission-div container-fluid">
         <h2 class="heading">Our Mission</h2>
