Adding form files and homepage integration

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     Are you UK based, of Black heritage and studying/studied a physics-related course? <br>
                     <p class="cta-subtext">Join our community using the button below</p> 
                 </p>
-                <a href="mailto:connect@theblackettlabfamily.com?subject=Join Request"> <button class="btn btn-outline-dark btn-lg" type="button"> <i class="contact-icon fas fa-user-plus"></i> Join Us </button></a>
+                <a href="form.html"> <button class="btn btn-outline-dark btn-lg" type="button"> <i class="contact-icon fas fa-user-plus"></i> Join Us </button></a>
             </div>
             <div class="col-lg-6">
                     <p class="cta-text">
