--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Our Mission: Diversifying perceptions of physics and addressing Black underrepresentation at all levels in the field">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Join Us | The Blackett Lab Family </title>
 
