--- a/form.html
+++ b/form.html
@@ -133,7 +133,7 @@
         <form id="inductionform" name="inductionform">
           <div class="form-group required form-row">
             <div class="form-label required col-sm-5">
-              <label class="control-label" for="fname">Your name</label>
+              <label class="control-label" for="fname">Your name </label>
               <input
                 type="text"
                 class="form-control"
@@ -172,6 +172,22 @@
                 >Optional: If this differs from your full name, enter your
                 Facebook account name here</small
               >
+            </div>
+          </div>
+
+          <div class="form-group form-row">
+            <div class="form-label col required">
+              <label class="control-label" for="email"
+                >Your email address
+              </label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="name@example.com"
+                maxlength="100"
+                required
+              />
             </div>
           </div>
 
