--- a/form.html
+++ b/form.html
@@ -374,7 +374,7 @@
 
     function redirectUser() {
       spinner.show();
-      fetch(scriptURL, { method: "POST", body: new FormData(form) })
+      fetch(scriptURL, { method: "POST", body: JSON.stringify({"form": new FormData(form), "recaptcha": grecaptcha.getResponse()}) })
         .then((response) => {
           if (response.ok) {
             spinner.hide();
