--- a/form.html
+++ b/form.html
@@ -184,6 +184,7 @@
                 type="email"
                 class="form-control"
                 id="email"
+                name="email"
                 placeholder="name@example.com"
                 maxlength="100"
                 required
