--- a/form.html
+++ b/form.html
@@ -51,11 +51,6 @@
 
     <!-- Animate on Scroll -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!--- reCAPTCHA-->
-    <script src="https://www.google.com/recaptcha/api.js"></script>
-
-    <script src="view.js"></script>
   </head>
   <body>
     <section class="white-section" id="title">
@@ -184,6 +179,7 @@
                 type="email"
                 class="form-control"
                 id="email"
+                name="email"
                 placeholder="name@example.com"
                 maxlength="100"
                 required
@@ -290,12 +286,15 @@
             </div>
 
             <label class="recaptcha-label" for="captcha">
-              <span>&nbsp;</span>
-              <div
+              <div  class="g-recaptcha"
+                    data-sitekey="6Lf6Kt8ZAAAAAGby_a96R6SncilAuY7t_3BN1LUp"
+                    data-callback="submitSignUpForm"
+                    data-size="invisible"></div>
+              <!-- <div
                 id="recaptcha"
                 class="g-recaptcha brochure__form__captcha"
                 data-sitekey="6LdOO8YZAAAAABSjkMHBBweHky9EmoRNKHEoUOFj"
-              ></div>
+              ></div> -->
             </label>
           </div>
 
@@ -326,74 +325,10 @@
     </section>
 
     <div id="loader"></div>
+
+    <script src="js/signUpForm.js"></script>
+
+    <!--- reCAPTCHA-->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </body>
-
-  <!--  Form JavaScript -->
-  <script>
-    const scriptURL =
-      "https://script.google.com/macros/s/AKfycbxVEA9ftoq1bst8mr-dK5gp8u3-ztCXWN6NNYloXSgYSWesw6VE/exec";
-    const form = document.forms["inductionform"];
-
-    var submissionCount = 0;
-    var spinner = $("#loader");
-
-    function submissionHandler() {
-      var t0 = performance.now();
-
-      fetch(scriptURL, { method: "POST", body: new FormData(form) })
-        .then((response) => {
-          ++submissionCount;
-          // console.log('Success!' + submissionCount, response);
-          var t1 = performance.now();
-          if (t1 - t0 > 2000) {
-            console.log(
-              "Time taken" + (t1 - t0) + "ms" + "Count" + submissionCount
-            );
-          }
-          if (submissionCount < 100) {
-            submissionHandler();
-          }
-        })
-        .catch((error) => console.error("Error!", error.message));
-    }
-
-    function errorHandler(submissionNo) {
-      if (submissionNo < 3) {
-        alert(
-          "Submission failed, please try again. Tries left: " +
-            (3 - submissionNo)
-        );
-        console.log("Submission failed, tries left: " + (3 - submissionNo));
-        // Re-enable submit button
-        document.querySelector("#submit-form").disabled = false;
-      } else {
-        window.location.href = "email.html";
-        throw new Error("Submission failed, exceeded 3 retries.");
-      }
-    }
-
-    function redirectUser() {
-      spinner.show();
-      fetch(scriptURL, { method: "POST", body: JSON.stringify({"form": new FormData(form), "recaptcha": grecaptcha.getResponse()}) })
-        .then((response) => {
-          if (response.ok) {
-            spinner.hide();
-            console.log("Success!", response);
-            redirect(form);
-          }
-        })
-        .catch((error) => {
-          spinner.hide();
-          ++submissionCount;
-          errorHandler(submissionCount);
-          console.log("Error!", error.message);
-        });
-    }
-
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      document.querySelector("#submit-form").disabled = true;
-      redirectUser();
-    });
-  </script>
 </html>
