Changed email address on form.

--- a/form.html
+++ b/form.html
@@ -118,8 +118,8 @@
           The purpose of this short questionnaire is for you to introduce
           yourself to us, and for us to get to know you a bit more. If you have
           any questions about the questionnaire, feel free to contact us at
-          <a class="hyperlink" href="mailto:connect@theblackettlabfamily.com"
-            >connect@theblackettlabfamily.com</a
+          <a class="hyperlink" href="mailto:community@theblackettlabfamily.com"
+            >community@theblackettlabfamily.com</a
           >
         </h2>
       </div>
