reCAPTCHA is now reset after long timeout.
reCAPTCHA errors are now forwarded to handleError.

--- a/form.html
+++ b/form.html
@@ -289,12 +289,8 @@
               <div  class="g-recaptcha"
                     data-sitekey="6Lf6Kt8ZAAAAAGby_a96R6SncilAuY7t_3BN1LUp"
                     data-callback="submitSignUpForm"
+                    data-error-callback="handleRecaptchaError"
                     data-size="invisible"></div>
-              <!-- <div
-                id="recaptcha"
-                class="g-recaptcha brochure__form__captcha"
-                data-sitekey="6LdOO8YZAAAAABSjkMHBBweHky9EmoRNKHEoUOFj"
-              ></div> -->
             </label>
           </div>
 
