--- a/form.html
+++ b/form.html
@@ -117,7 +117,7 @@
           too. <br /><br />
           The purpose of this short questionnaire is for you to introduce
           yourself to us, and for us to get to know you a bit more. If you have
-          any questions about the questionnaire, feel free to contact us at
+          any questions about joining, feel free to contact us at
           <a class="hyperlink" href="mailto:community@theblackettlabfamily.com"
             >community@theblackettlabfamily.com</a
           >
