Recapitalising privacy policy

--- a/form.html
+++ b/form.html
@@ -263,7 +263,7 @@
 
           <div class="form-group">
             <p class="data-promise">
-              Privacy policy: As a member, we will only store your name, so that
+              Privacy Policy: As a member, we will only store your name, so that
               we will recognise your request to join our private Facebook group,
               and your answer to “what you hope to get out of joining us”. We
               will retain this data indefinitely, but will happily delete it if
