"Having Trouble?" is now displayed after 3 failures or reCAPTCHA timeout.

--- a/form.html
+++ b/form.html
@@ -304,7 +304,7 @@
           </button>
         </form>
 
-        <div id="havingTrouble" class="form-group darkBox" style="display: none;">
+        <div id="havingTrouble" class="form-group darkBox fade-in" style="display: none;">
           <h3 class="subheading">Having Trouble?</h3>
           <p>
           Perhaps your mobile signal is weak, or our servers are feeling overworked.
@@ -312,12 +312,12 @@
           If you're fed up of trying to submit the form, feel free to email your information to us instead by doing one of the following:
           </p>
           <div>
-            <ul style="display: inline-block; text-align: left;">
+            <ul class="centreList">
               <li><b>Easiest option:</b> click
                 <a id="emailData" href="mailto:community@theblackettlabfamily.com?subject=Join%20Request" class="darkBoxLink">here</a> to
                 open a pre-written email in your email client; or
               </li>
-              <li>Copy the code below and paste it into an email addressed to
+              <li>Copy the data below and paste it into an email addressed to
                 <a href="mailto:community@theblackettlabfamily.com?subject=Join%20Request" class="darkBoxLink">community@theblackettlabfamily.com</a>.
               </li>
             </ul>
@@ -325,14 +325,14 @@
           <textarea
             class="form-control darkBoxSubBox"
             rows="5"
-            id="codeBox"
+            id="dataBox"
             readonly
           ></textarea>
           <button
             type="button"
-            id="copyCode"
+            id="copyData"
             class="btn btn-lg btn-outline-light"
-          >Copy Code</button>
+          >Click to Copy Data</button>
         </div>
       </div>
 
