Adding email disclaimer text

--- a/form.html
+++ b/form.html
@@ -104,12 +104,12 @@
           interaction, and fun, and encourage members to get involved with lots
           of social, educational, and professional opportunities. Our primary
           platform to connect with each other is Facebook, though you can engage
-          with us on Instagram<a
+          with us on Instagram<a  
             href="https://www.instagram.com/blackettlabfam/"
             target="_blank"
             ><i class="footer-icon fab fa-instagram"></i
           ></a>
-          and Twitter<a
+          and Twitter<a 
             href="https://twitter.com/blackettlabfam"
             target="_blank"
             ><i class="footer-icon fab fa-twitter"></i
@@ -184,6 +184,9 @@
                 maxlength="100"
                 required
               />
+              <small id="small emailhelp" class="form-text text-muted"
+              >We will use your email address to share opportunities to connect, engage and collaborate. We promise not to spam!</small
+            >
             </div>
           </div>
 
@@ -286,11 +289,13 @@
             </div>
 
             <label class="recaptcha-label" for="captcha">
-              <div  class="g-recaptcha"
-                    data-sitekey="6Lf6Kt8ZAAAAAGby_a96R6SncilAuY7t_3BN1LUp"
-                    data-callback="submitSignUpForm"
-                    data-error-callback="handleRecaptchaError"
-                    data-size="invisible"></div>
+              <div
+                class="g-recaptcha"
+                data-sitekey="6Lf6Kt8ZAAAAAGby_a96R6SncilAuY7t_3BN1LUp"
+                data-callback="submitSignUpForm"
+                data-error-callback="handleRecaptchaError"
+                data-size="invisible"
+              ></div>
             </label>
           </div>
 
@@ -304,21 +309,37 @@
           </button>
         </form>
 
-        <div id="havingTrouble" class="form-group darkBox fade-in" style="display: none;">
+        <div
+          id="havingTrouble"
+          class="form-group darkBox fade-in"
+          style="display: none"
+        >
           <h3 class="subheading">Having Trouble?</h3>
           <p>
-          Perhaps your mobile signal is weak, or our servers are feeling overworked.
-          Either way, we apologise for the inconvenience.
-          If you're fed up of trying to submit the form, feel free to email your information to us instead by doing one of the following:
+            Perhaps your mobile signal is weak, or our servers are feeling
+            overworked. Either way, we apologise for the inconvenience. If
+            you're fed up of trying to submit the form, feel free to email your
+            information to us instead by doing one of the following:
           </p>
           <div>
             <ul class="centreList">
-              <li><b>Easiest option:</b> click
-                <a id="emailData" href="mailto:community@theblackettlabfamily.com?subject=Join%20Request" class="darkBoxLink">here</a> to
-                open a pre-written email in your email client; or
+              <li>
+                <b>Easiest option:</b> click
+                <a
+                  id="emailData"
+                  href="mailto:community@theblackettlabfamily.com?subject=Join%20Request"
+                  class="darkBoxLink"
+                  >here</a
+                >
+                to open a pre-written email in your email client; or
               </li>
-              <li>Copy the data below and paste it into an email addressed to
-                <a href="mailto:community@theblackettlabfamily.com?subject=Join%20Request" class="darkBoxLink">community@theblackettlabfamily.com</a>.
+              <li>
+                Copy the data below and paste it into an email addressed to
+                <a
+                  href="mailto:community@theblackettlabfamily.com?subject=Join%20Request"
+                  class="darkBoxLink"
+                  >community@theblackettlabfamily.com</a
+                >.
               </li>
             </ul>
           </div>
@@ -332,7 +353,9 @@
             type="button"
             id="copyData"
             class="btn btn-lg btn-outline-light"
-          >Click to Copy Data</button>
+          >
+            Click to Copy Data
+          </button>
         </div>
       </div>
 
