Widened margins and reduced font sizes on mobile

--- a/welcome.html
+++ b/welcome.html
@@ -62,7 +62,7 @@
         
 
         <div class="container-fluid redirect">
-            <h2 class="heading">
+            <h2 class="heading welcome">
                 Thank you for your responses, we look forward to welcoming you! 
             </h2>
             <p class="form-subtitle">
