--- a/form.html
+++ b/form.html
@@ -314,7 +314,8 @@
           class="form-group darkBox fade-in"
           style="display: none"
         >
-          <h3 class="subheading">Having Trouble?</h3>
+          <h3 class="subheading" style="
+          margin: 0 0 5% 0;">Having Trouble?</h3>
           <p>
             Perhaps your mobile signal is weak, or our servers are feeling
             overworked. Either way, we apologise for the inconvenience. If
