Reworded opt-out instructions.

--- a/form.html
+++ b/form.html
@@ -143,7 +143,7 @@
               autocomplete="off"
             />
             <label for="recaptchaCookies">
-              <span class="notice" id="cookiesOptOut" style="display:none">[To opt out, refresh or leave the page]</span>
+              <span class="notice" id="cookiesOptOut" style="display:none">[Refresh or leave the page to opt out]</span>
               I consent to Google storing cookies, and using my information in accordance with their
               <a class="hyperlink" href="https://policies.google.com/privacy" target="_blank">privacy policy</a>.
             </label>
