--- a/form.html
+++ b/form.html
@@ -10,21 +10,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Join Us | The Blackett Lab Family</title>
 
-    <link rel="icon" href="images/Logo Icon 2.png" />
+    <link rel="icon" href="images/Logo Icon 2.png">
     <!-- CSS Stylesheets -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
-    />
+    >
 
     <!-- Font Awesome -->
     <script
@@ -32,25 +27,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Bootstrap -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Animate on Scroll -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="third-party/jquery-3.5.1/jquery-3.5.1.slim.min.js"></script>
+    <script src="third-party/popper-1.16.0/popper.min.js"></script>
+    <script src="third-party/bootstrap-4.5.3/bootstrap.min.js"></script>
   </head>
   <body>
     <section class="white-section" id="title">
