--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/Logo Icon 2.png">
 
      <!-- CSS Stylesheets -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Google Fonts -->
@@ -18,13 +18,11 @@
     <script src="https://kit.fontawesome.com/bd9aebcf2a.js" crossorigin="anonymous"></script>
 
     <!-- Animate on Scroll -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="third-party/aos-2.3.1/aos.css" rel="stylesheet">
 
-
-    <!-- Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="third-party/jquery-3.5.1/jquery-3.5.1.slim.min.js"></script>
+    <script src="third-party/popper-1.16.0/popper.min.js"></script>
+    <script src="third-party/bootstrap-4.5.3/bootstrap.min.js"></script>
 
     <script src="js/action.js"></script>
 </head>
@@ -393,7 +391,7 @@
 </section>
 
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="third-party/aos-2.3.1/aos.js"></script>
     <script>
         AOS.init();
       </script>
