Redirect page links now open in new tab/window.

--- a/redirect.html
+++ b/redirect.html
@@ -76,30 +76,30 @@
                 <li style=" list-style-type: none;">
                     <div class="redirect-links row ">
                         <div class="col-lg-3">
-                            <a href="https://bbstem.co.uk/" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> BBSTEM </a>
+                            <a href="https://bbstem.co.uk/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> BBSTEM </a>
                         </div>
 
                         <div class="col-lg-3">
-                            <a href="https://byp-network.com/" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> BYP Network </a>
+                            <a href="https://byp-network.com/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> BYP Network </a>
 
                         </div>
 
                             <div class="col-lg-3">
-                                <a href="https://www.acrcollective.com/" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> ARCR </a>
+                                <a href="https://www.acrcollective.com/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> ARCR </a>
                             </div>
 
                             <div class="col-lg">
-                                <a href="https://twitter.com/warc_uk" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> WARC </a>
+                                <a href="https://twitter.com/warc_uk" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> WARC </a>
                             </div>
 
                             <div class="col-lg-3">
-                                <a href="https://www.melaninmedics.com/" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> Melanin Medics </a>
+                                <a href="https://www.melaninmedics.com/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> Melanin Medics </a>
                             </div>
                             <div class="col-lg-3">
-                                <a href="https://minoritiesinstem.wordpress.com/" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> Minorities in STEM </a>
+                                <a href="https://minoritiesinstem.wordpress.com/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> Minorities in STEM </a>
                             </div>
                             <div class=" col-lg-3">
-                                <a href="https://www.amosbursary.org.uk/" class="redirect-link hyperlink"> <i class="footer-icon fa fa-link"></i> The Amos Bursary </a>
+                                <a href="https://www.amosbursary.org.uk/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> The Amos Bursary </a>
 
                             </div>
 
