Now self-hosting FontAwesome.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/bd9aebcf2a.js" crossorigin="anonymous"></script>
+    <link href="third-party/fontawesome-5.15.1/css/all.min.css" rel="stylesheet">
 
     <!-- Animate on Scroll -->
     <link href="third-party/aos-2.3.1/aos.css" rel="stylesheet">
