--- a/redirect.html
+++ b/redirect.html
@@ -15,7 +15,7 @@
 <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
 
 <!-- Font Awesome -->
-<script src="https://kit.fontawesome.com/bd9aebcf2a.js" crossorigin="anonymous"></script>
+<link href="third-party/fontawesome-5.15.1/css/all.min.css" rel="stylesheet">
 
 <script src="third-party/jquery-3.5.1/jquery-3.5.1.slim.min.js"></script>
 <script src="third-party/popper-1.16.0/popper.min.js"></script>
