Added "or you're using an old browser that doesn't support this form"

--- a/form.html
+++ b/form.html
@@ -90,7 +90,8 @@
           too. <br /><br />
           The purpose of this short questionnaire is for you to introduce
           yourself to us, and for us to get to know you a bit more. If you have
-          any questions about joining, feel free to contact us at
+          any questions about joining, or you're using an old browser that doesn't support this form,
+          feel free to contact us at
           <a class="hyperlink" href="mailto:community@theblackettlabfamily.com?subject=Join%20Request"
             >community@theblackettlabfamily.com</a
           >
