Adds about section text and elements

--- a/index.html
+++ b/index.html
@@ -62,8 +62,23 @@
             <h1 class="heading">ABOUT US            <hr>
             </h1> 
             <p>We are a social enterprise made up of people from a variety of professions and specialisms all over the country who share a passion for physics and positive representations of the Black community.</p>
+            
+            <span id=readmore>
+                <p >
+                     Our story began in 2006 at the world-renowned Blackett Laboratory – the physics department at Imperial College London. Dr Mark Richards, an eminent physicist and senior teaching fellow there, decided to take on two Black students as their academic and social mentor.
+                </p>
+                <p>
+                Very much a tiny fraction of the student and staff body, what began as three ‘Blackett Brothers’ would soon grow to become: <br> The Blackett Lab Family.
+            </p>
+            <p >
+                Today, we are a growing national collective of talented, successful and influential people making waves in education, research, industry, technology, finance and law.
+                                </p>
+                            </span>
 
-            </div>
+    <button class="button" onclick="myFunction()" id="MoreBtn">Read More <i class="fas fa-chevron-down"></i></button>
+    <button class="button" onclick="myFunction()" id="LessBtn">Read Less <i class="fas fa-chevron-up"></i></button>
+
+        </div>
     </section>
 
 
